# lottery

./: .travis.yml  CMakeLists.txt  README.md  meson.build
data/: CMakeLists.txt  com.github.bartzaalberg.lottery.appdata.xml  com.github.bartzaalberg.lottery.appdata.xml.in  com.github.bartzaalberg.lottery.desktop  com.github.bartzaalberg.lottery.desktop.in  com.github.bartzaalberg.lottery.gschema.xml
data/icons/: icons.gresource.xml
debian/: changelog  control
po/: LINGUAS  POTFILES  com.github.bartzaalberg.lottery.pot  fr.po  nl.po  pl.po  pt.po
po/extra/: POTFILES  extra.pot  fr.po  nl.po  pt.po
snap/: com.github.bartzaalberg.lottery.desktop  snapcraft.yaml
src/: Application.vala  Constants.vala  EntryManager.vala  ListBox.vala  ListBoxRow.vala  ListManager.vala  MainWindow.vala  StackManager.vala
src/Components/: HeaderBar.vala
src/Dialogs/: AddEntry.vala  Alert.vala  Cheatsheet.vala  DeleteConfirm.vala  Winner.vala
src/Views/: ListView.vala  NotFoundView.vala  WelcomeView.vala  WinnerView.vala
